# djangocon-eu-ddd

./: .gitignore  README.md  manage.py  pyproject.toml
api/: context.py  schema.py  views.py
api/events/: types.py
api/tests/events/: test_create_event.py  test_event.py
app/events/: entities.py  exceptions.py  repository.py  services.py
app/events/tests/: test_services.py
db/: models.py
db/migrations/: 0001_initial.py
ddd/: asgi.py  settings.py  urls.py  wsgi.py
